
===========
Changes log  
===========


@version-full@ (@release-date@)

1.0.1 (2007-05-04)
[Bugs fixed]
 - Fixed comment error in class ServerServlet.
 - Fixed bug with the ObjectRepresentation class. The constructor with 
   Representation parameter did not get the stream from the serialized parameter.
 - Fixed potential bug when testing equality between media types ignoring the 
   parameters.
 - ServletConverter now also set the request's rootRef property and allows customization
   of the "baseRef" and "rootRef" value via getBaseRef() and getRootRef() methods.
 - Fixed NPE in ApplicationDispatcher when the context from the parent Component isn't
   set. Now a warning message is logged. Reported by Jeff Walter and Chuck Hinson.
 - ApplicationHelper was not properly setting the Application.KEY attribute in
   the incoming requests and responses, causing problem in usage of services such
   as the ConnectorService. Reported by Dig.
 - Clarified the Javadocs on the Context.getParameters() method and on the default
   constructors for Application, Restlet, Router and VirtualHost. Suggested by Alex Milowski
   and Chuck Hinson.
 - Test mediaType inclusion instead of equality when checking metadata 
   consistency in FileClientHelper class.
 - Fixed bug causing HTTP authentication with a long user or password to fail, added JUnit test case. 
   Reported and contributed by Stian Soiland.

[Enhancements] 
 - Separated BLOAT library from db4o library for better dependency management.
 - Updated db4o to version 6.1.501.
 - Updated Retrotranslator to version 1.2.1.
 - Removed unused Retroweaver, ASM and Backport libraries.
 - Updated Apache Commons DBCP to version 1.2.2.
 - Updated FreeMarker to version 2.3.10.
 - Updated JUnit to version 4.3.1.
 - Updated Jetty to version 6.1.2.
 - Updated Spring JARs to version 2.0.4.
 - Lowered the log level of some exceptions from WARNING to INFO.

1.0.0 (2007-04-16)
[Bugs fixed]